--- a/src/Unsinedz.SimpleJsonLocalization/Unsinedz.SimpleJsonLocalization.csproj
+++ b/src/Unsinedz.SimpleJsonLocalization/Unsinedz.SimpleJsonLocalization.csproj
@@ -3,10 +3,18 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
+  <PropertyGroup>
     <PackageId>Unsinedz.SimpleJsonLocalization</PackageId>
     <Version>1.0.0</Version>
     <Authors>Denys Zosimovych</Authors>
     <Company>Denys Zosimovych</Company>
+    <Title>Unsinedz Simple JSON Localization</Title>
+    <Description>An alternative way to store string resources is using the JSON files. This package gives a possibility to organize string localizations in files per culture name. It also supports fallback to the neutral culture and default culture.</Description>
+    <PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
+    <PackageTags>Localization;ASP.NET Core;JSON</PackageTags>
+    <RepositoryUrl>https://github.com/unsinedZ/Unsinedz.SimpleJsonLocalization/</RepositoryUrl>
   </PropertyGroup>
 
   <PropertyGroup>
